<resources>
    <string name="app_name">Aahar</string>
    <string name="title_activity_ngonavigation">ngonavigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Food4Thought</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">gallery</string>
    <string name="menu_slideshow">slideshow</string>

    <string name="menu_track">Track</string>
    <string name="menu_check">Availability</string>
    <string name="menu_delivery">Deivery</string>
</resources>